# phd-manuscript-links

./: .gitignore  README.md  Rampal-f7.html  chap1.html  chap2.html  chap3.html  chap4.html  chap5.html  chap7.html
audiofeatures-sec5.2/: README.md  pyproject.toml  recordings.csv  requirements.txt
audiofeatures-sec5.2/alignments/: chroma_alignment.py  common_variables_functions.py  neural_alignment.py  shift_neural_alignments.py  st_alignment.py
audiofeatures-sec5.2/annotations/A2/: bars_f1_indermuhle.csv  bars_f1_kuijken.csv  bars_f1_leleux.csv  bars_f1_nahajowski.csv  bars_f1_pahud.csv  bars_f1_pitelina.csv  bars_f1_rampal.csv  bars_f1_verbruggen.csv
audiofeatures-sec5.2/mpe-interference/: README.md  features.py  predictor.py  script.py  training.py
audiofeatures-sec5.2/npz/indermuhle/: indermuhle_f1.npz  indermuhle_f11.npz  indermuhle_f12.npz  indermuhle_f2.npz  indermuhle_f3.npz  indermuhle_f4.npz  indermuhle_f5.npz  indermuhle_f6.npz  indermuhle_f8.npz
audiofeatures-sec5.2/npz/kuijken/: kuijken_f1.npz  kuijken_f10.npz  kuijken_f11.npz  kuijken_f12.npz  kuijken_f2.npz  kuijken_f3.npz  kuijken_f4.npz  kuijken_f5.npz  kuijken_f6.npz  kuijken_f7.npz  kuijken_f8.npz  kuijken_f9.npz
audiofeatures-sec5.2/npz/leleux/: leleux_f1.npz  leleux_f10.npz  leleux_f11.npz  leleux_f2.npz  leleux_f3.npz  leleux_f4.npz  leleux_f5.npz  leleux_f8.npz
audiofeatures-sec5.2/npz/nahajowski/: nahajowski_f1.npz  nahajowski_f10.npz  nahajowski_f11.npz  nahajowski_f2.npz  nahajowski_f3.npz  nahajowski_f4.npz  nahajowski_f5.npz  nahajowski_f7.npz  nahajowski_f8.npz
(+748 files in other folders)
