[project]
name = "score-audio-woodwinds"
version = "0.1.0"
description = "Score-to-Audio alignments for Woodwinds Recordings"
requires-python = ">=3.10,<3.11"

dependencies = [
    "libfmp==1.3.0",
    "librosa==0.11.0",
    "matplotlib==3.10.8",
    "music21==9.9.1",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "scipy==1.15.3",
    "synctoolbox @ git+https://github.com/meinardmueller/synctoolbox.git"
]

[tool.uv]
dev-dependencies = [
    "ipython",
    "jupyter",
    "pytest"
]